# virtual-table-tennis

./: Ball.cpp  CMakeLists.txt  Dockerfile  Net.cpp  Player.cpp  main.cpp
headers/: Ball.h  Config.h  Net.h  Player.h
